--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
                     <input type="text" id="modal-delivery-address" placeholder="Rua, Número, Bairro, Referência" />
                   </div>
               </section>
+
+              <section class="form-section" id="modal-buyer-info-section" style="display: none;">
+                  <h4>Dados do Comprador (para Pagamento Online)</h4>
+                  <div class="input-group">
+                      <input type="text" id="modal-buyer-name" placeholder="Nome Completo do Pagador" />
+                  </div>
+                  <div class="input-group">
+                      <input type="email" id="modal-buyer-email" placeholder="Seu E-mail" />
+                  </div>
+              </section>
     
               <section class="payment-section" id="online-payment-section">
                   <h4>Pagar Online</h4>
