--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <script>
       const firebaseConfig = {
-        apiKey: "AIzaSyBh8J0_xp0hVjVNDytsou55LM3gVvHU8O0",
+        apiKey: "AIzaSyBh8J0_xp0hVjVNDYtsou55LM3gVvHU8O0",
         authDomain: "acaiemcasa.firebaseapp.com",
         projectId: "acaiemcasa",
         storageBucket: "acaiemcasa.firebasestorage.app",
@@ -122,10 +122,7 @@
               </section>
 
               <section class="form-section" id="modal-buyer-info-section" style="display: none;">
-                  <h4>Dados do Comprador (para Pagamento Online)</h4>
-                  <div class="input-group">
-                      <input type="text" id="modal-buyer-name" placeholder="Nome Completo do Pagador" />
-                  </div>
+                  <h4>Seu E-mail (para Pagamento Online)</h4>
                   <div class="input-group">
                       <input type="email" id="modal-buyer-email" placeholder="Seu E-mail" />
                   </div>
